# DontStarveLuaJIT2

./: .clang-format  .editconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_EN.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Lua51.natvis  LuaJit.natvis  Makefile  README.md  README_CN.md  README_EN.md  dev_init.bat  dev_init.sh  dockerfile  lua51.natvis  luajit21.py  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
3rd/: .gitignore  checks.lua  metalua_build.lua
3rd/metalua/: compiler.lua  loader.lua  treequery.lua
3rd/steam/: isteamgameserverstats.h  isteaminventory.h  isteamvideo.h  steam_gameserver.h  steamhttpenums.h
3rd/steam_sdk/: isteamappdisableupdate.h  isteamapplist.h  isteamapps.h  isteambilling.h  isteamclient.h  isteamclient006.h  isteamclient020.h  isteamcontroller.h  isteamfriends.h  isteamfriends001.h  isteamfriends002.h  isteamfriends017.h  isteamgamecoordinator.h  isteamgameserver.h  isteamgameserver002.h  isteamgameserver003.h  isteamgameserverstats.h  isteamgamestats.h  isteamhtmlsurface.h  isteamhttp.h  isteaminput.h  isteaminventory.h  isteammasterserverupdater.h  isteammatchmaking.h  isteammatchmaking001.h  isteamnetworkingsockets.h  isteamnetworkingsockets009.h  isteamnetworkingsockets010.h  isteamnetworkingsockets011.h  isteamnetworkingutils.h  isteamparentalsettings.h  isteamps3overlayrenderer.h  isteamremoteplay.h  isteamremoteplay001.h  isteamremoteplay002.h  (+53 more)
Mod/: inject_server_only_mod.lua  install.bat  install_linux.sh  installer.lua  mod.manifest  modicon.tex  modicon.xml  modinfo.lua  modmain.lua
cmake/: FindFrida-gum.cmake  FindSteam.cmake  Findkeystone.cmake  LuajitVariants.cmake
doc/: entity.MD  network.MD
docker/: copy_server_config.sh  dockerfile  start-docker-server.sh
docs/: DrawCacheRender.md  anim-draw-batching-design.md  ghidra-namespace-classification.md  ghidra-struct-analysis.md  lag-compensation.md  movement-prediction.md  network-sync-analysis.md  render-hook-design.md
src/: .gitignore  DontStarveLuaJIT.sln  Signatures.txt  Signatures_client.txt  build_lua51.bat  build_lua51_32.bat  missfunc.txt  modinfo.hpp  signatures_client.h  signatures_client.hpp  signatures_server.h  signatures_server.hpp  signatures_server.txt
src/DontStarveInjector/: .gitignore  BufferNamePool.hpp  CMakeLists.txt  DontStarveInjector.cpp  DontStarveInjector.h  DontStarveSignature.cpp  DontStarveSignature.hpp  DstAngleBackend.hpp  GameForkSave.cpp  GameLua.cpp  GameLua.def  GameLua.hpp  GameLuaInjectFramework.lua  GameLuaModule.cpp  GameLuaType.hpp  GameNetwork.cpp  GameNetwork.hpp  GameNetworkSim.cpp  GameOpenGl.cpp  GameOpenGl.hpp  GameProfilerHook.hpp  GameRenderHook.cpp  GameRenderHook.hpp  GameSignature.cpp  GameSignature.hpp  GameSimHook.cpp  GameSteam.cpp  GameSteam.hpp  GameSteamTest.cpp  GameVersionFile.hpp  LuaApi.hpp  LuaModule.hpp  LuajitVariantNames.hpp  PersistentString.cpp  PersistentString.hpp  ProcessMutex.hpp  Progress.cpp  Progress.hpp  Signature.cpp  Signature.hpp  (+34 more)
src/DontStarveInjector/loader/: CMakeLists.txt  PersistentString.cpp  PersistentString.hpp  steam.cpp  steam.hpp  updater.cpp  winmm.cpp  winmm_main.cpp
src/DontStarveInjector/util/: InvocationListener.hpp  ModuleSignature.cpp  ModuleSignature.hpp  PersistentString.cpp  Signature.cpp  Signature.hpp  file_interface.hpp  gum_platform.cpp  gum_platform.hpp  inlinehook.cpp  inlinehook.hpp  lua51_object.cpp  lua51_object.hpp  lua_io2.cpp  lua_io2.hpp  module.cpp  module.hpp  nfile.hpp  platform.cpp  platform.hpp  steam.cpp  steam.hpp  steam_sdk.hpp  tools.hpp  updater.cpp  win_wfile.hpp  zipfile.cpp  zipfile.hpp
src/DontStarveInjector/util/tests/: CMakeLists.txt  main.cpp
src/DontStarveInjector/util/tests/win_wfile/: 1.txt  2.txt  bug1023.txt  bug512.txt  modmain0.lua
src/FunctionRelocation/: CMakeLists.txt  ExectuableSignature.cpp  ExectuableSignature.hpp  KartaConfig.cpp  KartaConfig.h  MemorySignature.cpp  MemorySignature.hpp  ModuleSections.cpp  ModuleSections.hpp  ScanCtx.cpp  ScanCtx.hpp  Signature.cpp  Signature.hpp  config.hpp  ctx.cpp  ctx.hpp  disasm.h
tests/: CMakeLists.txt  arg_bug.lua  arg_bug_obfuscated.lua  backtrace.lua  bug1.lua  builtin.lua  const_table_call_arg.lua  const_table_tree.lua  ffi_abi.lua  function_args.lua  function_args_closure.lua  function_args_debug.lua  function_args_main_chunk.lua  hash_table.lua  luajit_gengc_output_name_test.cmake  luajit_variant_registry_test.cmake  new_table.lua  sect.lua  strings.lua  tailcall_helper_recursion.lua  test_buffer_name_pool.cpp  trace_test.lua  trace_test_51.lua  unpack.lua  unpack_jit.lua  workshop-2847908822.7z
tests/fork_save/: fork_save_spec.lua  run.py
tests/lua51_sync/: distribution_compare.py  hash_table.lua  lex_escape_compat.lua  run.py  strfmt_invalid_option.lua  strfmt_pushfstring_module.c  strfmt_pushfstring_module.lua  string_hash_distribution_probe.lua  strings.lua  unpack.lua
tests/sect/: Decrypt_directory.py  README.md  base64N.py  desect.py  extract_const_string_table.py  fengxue.lua  fengxuemy.lua  fold_G.py  fold_compiler.lua  fold_const.lua  fold_expression.py  format_ins.py  inss.json  simulator.lua  simulator_ingame.lua  table_dump.lua  trace_opcode_block.lua
tests/stress_test_mod/: DST_STRESS_TEST_RESEARCH.md  README.md  modinfo.lua  modmain.lua  run_stress_test.py
tests/windows_x64/: Signatures_client.txt  Signatures_server.txt
tools/: ControlSend_D.ahk  Signature.py  build_by_docker.sh  build_lua51.py  docker_build_ubuntu  docker_build_ubuntu_any  download_frida_gum.py  inject_loader.py  linux_installed.sh  lua2c.py  make_karta.py  missfunc.py  modinfo2cpp.lua  modoverrides2modsetup.lua  steam_env.py  unzip_script_data.py  update_steam_paths.py  update_steamsdk.py  update_version.py  vcc2008varsamd64.bat  vcc2008vsvars32.bat
tools/Checker/: CMakeLists.txt  main.cpp
tools/Creater/: CMakeLists.txt  angle_iat_api_generator.cpp  main.cpp  update_signatures.sh
tools/PersistentString/: CMakeLists.txt  main.cpp
tools/mod_packer/: CMakeLists.txt  main.cpp
(+91 files in other folders)
